--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     var id = guid();
     // Initialize a new peer and connect to our server
     var peer = new Peer(id, {
-        host: 'webrtc-server-peerjs.herokuapp.com',
+        host: 'tnpeerproject.herokuapp.com',
         port: 443,
         secure: true,
         debug: 1
